# hubcap

./: .buildinfo  CACHING_GUIDE.md  CASTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html  test_ingress_patterns.py
.github/workflows/: ci.yml
_modules/: index.html
_modules/hubcap/: base.html  constants.html  repo_slurp.html  tools.html  util.html
_modules/hubcap/examples/: diagnose_repositories.html  get_wikis.html
_modules/hubcap/scrap/: direct_github_api.html
_sources/module_docs/: hubcap.rst.txt
_sources/module_docs/hubcap/: constants.rst.txt  examples.rst.txt  repo_slurp.rst.txt  scrap.rst.txt  util.rst.txt
_sources/module_docs/hubcap/examples/: get_wikis.rst.txt
docsrc/: index.rst  table_of_contents.rst
docsrc/module_docs/hubcap/: base.rst  tools.rst
docsrc/module_docs/hubcap/examples/: diagnose_repositories.rst  get_discussions.rst
docsrc/module_docs/hubcap/scrap/: direct_github_api.rst
hubcap/: __init__.py  actions.py  base.py  casting.py  constants.py  repo_slurp.py  tools.py  util.py
hubcap/data/: dflt_repo_collections_key_props.json
hubcap/examples/: __init__.py  diagnose_repositories.py  get_discussions.py  get_wikis.py
hubcap/scrap/: __init__.py  direct_github_api.py
misc/: Construction site.ipynb  Hubcap Construction Site.ipynb  hubcap demo.ipynb  hubcap_demo.ipynb
module_docs/: hubcap.html
module_docs/hubcap/: base.html  constants.html  examples.html  repo_slurp.html  scrap.html  tools.html  util.html
module_docs/hubcap/examples/: diagnose_repositories.html  get_discussions.html  get_wikis.html
module_docs/hubcap/scrap/: direct_github_api.html
