[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "hubcap"
version = "0.0.1"
description = "There is a bit of an air of mystery around this project..."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = []
dependencies = []

[project.license]
text = "mit"

[project.urls]
Homepage = ""

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
]
"examples/*" = [
    "D",
]
"scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]
