[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "hubcap"
version = "0.1.20"
description = "A dol (i.e. dict-like) interface to github"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "github",
]
authors = [
    { name = "Thor Whalen" },
]
dependencies = [
    "dol",
    "PyGithub",
    "requests",
    "config2py",
    "lkj",
]

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/thorwhalen/hubcap"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
]
"examples/*" = [
    "D",
]
"scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]
