[metadata]
name = hubcap
version = 0.1.20
url = https://github.com/thorwhalen/hubcap
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = A py2store (i.e. dict-like) interface to github
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
	github
display_name = hubcap

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dol
	PyGithub
	requests
	config2py
	lkj

[options.package_data]
hubcap = data/*

